--- a/index.html
+++ b/index.html
@@ -17,24 +17,16 @@
 
     <main>
         <label > Converter <b>De</b>
-            <select name="" class="currency_select_main">
-                <option value="real">R$ Real brasileiro</option> 
-                <option value="dolar">US$ Dólar americano</option>    
-                <option value="euro">€ Euro </option>                 
-            </select>
+            <select id="currency_select_main"></select>
         </label>
         <label > Converter <b>para</b>
-            <select class="currency_select" id="">
-                <option value="dolar">US$ Dólar americano</option>    
-                <option value="euro">€ Euro </option>   
-                <option value="real">R$ Real brasileiro</option>          
-            </select>
+            <select id="currency_select"></select>
         </label>
         <label for="">
             Valor
             <input class="input_currency" placeholder="R$ 10.000,00">
         </label>
-        <button class="btn" onclick="convertValues()">Converter</button>
+        <button class="btn" onclick="escolhendoMoeda()">Converter</button>
         
         <section>
             <div class="currency_box">
@@ -53,6 +45,8 @@
         </section>
 
     </main>
-    <script src="./script.js"></script>
+    <script src="script2.js"></script>
+    <script src="script.js"></script>
+   
   </body>
 </html>
