--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/style.css">
     <title>DevClub - Convert Money</title>
   </head>
-  <body>
+  <body onload="changeCurrencyToMain()">
     <img class="logo_convertor" src="/projeto1CursoJs/assets/logo.gif" alt="Imagem da logo">
 
     <main>
@@ -26,7 +26,7 @@
             Valor
             <input class="input_currency" placeholder="R$ 10.000,00">
         </label>
-        <button class="btn" onclick="escolhendoMoeda()">Converter</button>
+        <button class="btn" onclick="convertCurrency(), changeCurrencyToMain()">Converter</button>
         
         <section>
             <div class="currency_box">
